Top 10% of salary in colombia, all its fake

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Salary</title>
 </head>
 <body>
+    <h1>Top 10% de salarios en Colombia</h1>
     <script src="./js/salary.js"></script>
     <script src="./js/analisis.js"></script>
 </body>
